kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
  labels:
    name: devsecops
    environment: production
